--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+  margin:0px;
+  padding:0px;
+  border:0px;
+  
+   
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+html,
+body,
+#root,
+#root > div,
+div[data-reactroot] {
+   /* background-image: -webkit-radial-gradient(circle,  #000000, #434343); */
+   background-color: white ;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
