--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +9,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body #fonts {
+  font-family: 'Open Sans', sans-serif;
+  font-size: medium;
+  letter-spacing: 1px;
+}
+
+
+i.icon {
+  padding-top: 8px;
+  padding-left: 2px;
+}
+
+div.ui.four.cards {
+  margin-top: 180px;
+  margin-left: 120px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
