--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --bordercolor:#ccc;
+  --textcolor:rgba(0,0,0,0.6);
+  --buttonwidth:40px;
+  --iconopacity: 0.65;
+  --letterspace:0.02rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'OpenSans';
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-Bold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-BoldItalic.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  font-weight: bolder;
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-ExtraBold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  font-weight: bolder;
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-ExtraBoldItalic.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  font-style:italic;
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-Italic.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-Light.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  font-style:italic;
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-LightItalic.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-SemiBold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  font-style:italic;
+  src: local('OpenSans'), url(./assets/fonts/OpenSans/OpenSans-SemiBoldItalic.ttf) format('truetype');
+}
+
+body{
+  background: #f9f9f9;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+*{
+  margin: 0;
+  padding: 0;
+  font-size: inherit;
+  font-family: 'OpenSans';
+  text-shadow: none;
+  letter-spacing: var(--letterspace);
+  box-sizing: border-box;
+
+}
+.wrapper{
+  display: grid;
+  grid-template-areas: 
+  "header header header header"
+  "videos videos videos videos";
+  grid-template-columns: 240px 1fr 1fr;
+  position: relative;
 }
